# simple-raytracer

./: CMakeLists.txt  README.md  image.ppm
sources/camera/: CMakeLists.txt  camera.cpp  camera.h
sources/color/: CMakeLists.txt  color.cpp  color.h
sources/hitrec/: CMakeLists.txt  hitrec.cpp  hitrec.h
sources/hittable/: CMakeLists.txt  hittable.cpp  hittable.h
sources/hittablelist/: CMakeLists.txt  hittablelist.cpp  hittablelist.h
sources/material/: CMakeLists.txt  material.cpp  material.h
sources/ray/: CMakeLists.txt  ray.cpp  ray.h
sources/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
sources/scattering_record/: CMakeLists.txt  scattering_record.cpp  scattering_record.h
sources/temp/: CMakeLists.txt
sources/tobmp/: CMakeLists.txt  tobmp.cpp  tobmp.h
sources/utils/: CMakeLists.txt  utils.h
src/: main.cpp
